[package]
name = "orcrs"
version = "0.2.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
description = "An Apache ORC file reader for Rust"
keywords = ["orc", "apache-orc"]
categories = ["parser-implementations"]
homepage = "https://github.com/travisbrown/orcrs"
repository = "https://github.com/travisbrown/orcrs"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
exclude = [ ".github/*", ".codecov.yml", "examples/*", "test-gen/*", "scripts/*" ]

[dependencies]
bit-vec = "0.6"
clap = { version = "3.0", features = ["derive"] } # Only for CLI tools
csv = "1.0" # Only for CLI tools
flate2 = "1.0"
integer-encoding = "3.0"
log = "0.4" # Only for CLI tools
protobuf = "2.25"
simplelog = "0.11" # Only for CLI tools
thiserror = "1.0"
zstd = "0.10"

[build-dependencies]
protobuf-codegen-pure = "2.25"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
